--- a/src/Shience/Shience.csproj
+++ b/src/Shience/Shience.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Science.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\TestResult.cs" />
+    <Compile Include="Shience.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
