--- a/src/Shience.Test/Shience.Test.csproj
+++ b/src/Shience.Test/Shience.Test.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="FakePublisher.cs" />
+    <Compile Include="PublisherTests.cs" />
     <Compile Include="ScienceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
