--- a/src/Shience/project.json
+++ b/src/Shience/project.json
@@ -7,7 +7,7 @@
   "licenseUrl": "",
 
   "frameworks": {
-    "dotnet5.4": {
+    "dnxcore50": {
       "dependencies": {
         "System.Runtime": "4.0.21-rc2-23706",
         "System.IO": "4.0.11-rc2-23706",
