--- a/src/Shience/project.json
+++ b/src/Shience/project.json
@@ -9,6 +9,7 @@
   "frameworks": {
     "dnxcore50": {
       "dependencies": {
+        "System.Threading": "4.0.11-beta-23516",
         "System.Runtime": "4.0.21-rc2-23706",
         "System.IO": "4.0.11-rc2-23706",
         "System.IO.FileSystem": "4.0.1-rc2-23629",
