--- a/src/Shience/project.json
+++ b/src/Shience/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-beta2",
+  "version": "0.0.1",
   "title": "Shience",
   "description": "A library for carefully refactoring critical paths",
   "authors": [ "david.zych" ],
