--- a/src/Shience/project.json
+++ b/src/Shience/project.json
@@ -11,6 +11,7 @@
   "frameworks": {
     "dnxcore50": {
       "dependencies": {
+        "Microsoft.CSharp": "4.0.1-beta-23516",
         "System.Threading": "4.0.11-beta-23516",
         "System.Runtime": "4.0.21-rc2-23706",
         "System.IO": "4.0.11-rc2-23706",
