Updated author info

--- a/src/Shience/project.json
+++ b/src/Shience/project.json
@@ -2,8 +2,8 @@
   "version": "0.0.1-beta3",
   "title": "Shience",
   "description": "A library for carefully refactoring critical paths",
-  "authors": [ "david.zych", "Johann Dirry <movgp0@gmail.com>" ],
-  "owners": [ "david.zych" ],
+  "authors": [ "Dave Zych <dave@davidzych.com>", "Johann Dirry <movgp0@gmail.com>" ],
+  "owners": [ "Dave Zych <dave@davidzych.com>" ],
   "tags": [ "Refactoring", "Science", "critical path" ],
   "projectUrl": "https://github.com/davezych/shience",
   "licenseUrl": "https://opensource.org/licenses/MIT",
