--- a/src/Shience/project.json
+++ b/src/Shience/project.json
@@ -11,13 +11,13 @@
   "frameworks": {
     "dnxcore50": {
       "dependencies": {
-        "Microsoft.CSharp": "4.0.1-beta-23516",
-        "System.Threading": "4.0.11-beta-23516",
-        "System.Runtime": "4.0.21-rc2-23706",
-        "System.IO": "4.0.11-rc2-23706",
-        "System.IO.FileSystem": "4.0.1-rc2-23629",
-        "System.Collections": "4.0.11-rc2-23706",
-        "System.Runtime.Extensions": "4.0.11-rc2-23629"
+        "Microsoft.CSharp": "4.0.1-rc2-23623",
+        "System.Threading": "4.0.11-rc2-23623",
+        "System.Runtime": "4.0.21-rc2-23623",
+        "System.IO": "4.0.11-rc2-23623",
+        "System.IO.FileSystem": "4.0.1-rc2-23623",
+        "System.Collections": "4.0.11-rc2-23623",
+        "System.Runtime.Extensions": "4.0.11-rc2-23623"
       }
     },
     "dnx451": { }
